[gd_scene load_steps=10 format=2]

[ext_resource path="res://Levels/TitleLevel.gd" type="Script" id=1]
[ext_resource path="res://Title/Background.png" type="Texture" id=2]
[ext_resource path="res://Title/Settings_Normal.png" type="Texture" id=3]
[ext_resource path="res://Title/How_To_Play.png" type="Texture" id=4]
[ext_resource path="res://Title/Title.png" type="Texture" id=5]
[ext_resource path="res://Title/Start.png" type="Texture" id=6]
[ext_resource path="res://Music and Sounds/Button_Sound.mp3" type="AudioStream" id=7]
[ext_resource path="res://Music and Sounds/Main Music.mp3" type="AudioStream" id=8]
[ext_resource path="res://Title/Settings_Hover.png" type="Texture" id=9]

[node name="Title" type="Node2D"]
script = ExtResource( 1 )

[node name="TitleLayer" type="CanvasLayer" parent="."]

[node name="Background" type="Sprite" parent="TitleLayer"]
position = Vector2( 965.663, 543.776 )
texture = ExtResource( 2 )

[node name="How_To_Play" type="Sprite" parent="TitleLayer"]
position = Vector2( 338.739, 534.076 )
scale = Vector2( 1.57407, 1.57407 )
texture = ExtResource( 4 )

[node name="ButtonSound" type="AudioStreamPlayer" parent="TitleLayer"]
stream = ExtResource( 7 )

[node name="Settings" type="TextureButton" parent="TitleLayer"]
margin_left = 1791.11
margin_top = 953.367
margin_right = 1910.11
margin_bottom = 1073.37
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleMusic" type="AudioStreamPlayer" parent="TitleLayer"]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="Start" type="Sprite" parent="TitleLayer"]
position = Vector2( 1285.59, 817.594 )
scale = Vector2( 0.279976, 0.279976 )
texture = ExtResource( 6 )

[node name="Title" type="Sprite" parent="TitleLayer"]
position = Vector2( 1265.77, 130 )
scale = Vector2( 0.618186, 0.618186 )
texture = ExtResource( 5 )

[connection signal="tree_exited" from="." to="." method="_on_Title_tree_exited"]
[connection signal="tree_exited" from="TitleLayer" to="." method="_on_TitleLayer_tree_exited"]
[connection signal="pressed" from="TitleLayer/Settings" to="." method="_on_Settings_pressed"]
